--- a/index.html
+++ b/index.html
@@ -435,9 +435,10 @@
                     "<h4><strong><center>"+"Pumpelag" +"</center></strong></h4>"+
                     "<h5><strong>Navn.: </strong>"+att.navn+"</h5>"+
                     "<h5><strong>Areal: </strong>"+att.Areal+"</h5>"+
+                    "<h5><strong>Status: </strong>"+att.status+"</h5>"+
                     "<h5><strong>Læs mere: </strong>"+att.Forklaring+"</h5>"+
                     "<h5><strong>Hjemmeside: </strong>"+att.Hjemmeside+"</h5>"
-                  //  "<h5><strong>Status pr. 1/1 2022: </strong>"+att.STATUS2021+"</h5>"
+
                     );
                             }
 
