--- a/index.html
+++ b/index.html
@@ -449,9 +449,7 @@
                     "<h5><strong>Navn.: </strong>"+att.navn+"</h5>"+
                     "<h5><strong>Areal: </strong>"+att.Areal+" ha"+"</h5>"+
                     "<h5><strong>Status: </strong>"+att.status+"</h5>"+
-                    "<h5><strong>Læs mere: </strong>"+att.Forklaring+"</h5>"+
-                    "<h5><strong>Hjemmeside: </strong>"+att.Hjemmeside+"</h5>"
-
+                    "<h5><strong>Læs mere: </strong>"<b></b><a href="+att.Forklaring+"></a></h5>"
                     );
                             }
 
