--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                             lyr.bindPopup(	
                         "<h4><strong><center>"+"Projekttype:  " +att.TYPE+"</center></strong></h4>"+
                         "<h5><strong>Areal: </strong>"+att.Areal+"</h5>"+
-                        "<h5><strong>Læs mere: </strong>"+"<b></b><a href="+att.Beskriv+">"+att.Lokalitet+"</a></h5>"+
+                        "<h5><strong>Læs mere: </strong>"+"<b></b><href="+att.Beskriv+">"+att.Lokalitet+"</a></h5>"+
                         "<h5><strong> </strong>"+att.Beskriv+"</h5>"
     
                          );}  
