--- a/index.html
+++ b/index.html
@@ -449,8 +449,9 @@
                         "<h5><strong>Navn.: </strong>"+att.navn+"</h5>"+
                         "<h5><strong>Areal: </strong>"+att.Areal+" ha"+"</h5>"+
                         "<h5><strong>Status: </strong>"+att.status+"</h5>"+
-                        "<h5><strong>Læs mere: </strong>"+a href=+att.Forklaring+"></a></h5>"
+                        "<h5><strong>Læs mere: </strong>"+"<b></b><a href="+att.Forklaring+">"+att.navn+"</a></h5>"
                         );
+                  
                                 }
     
                // Her laves marker for pkt vandløb
