--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                         "<h5><strong>Navn.: </strong>"+att.navn+"</h5>"+
                         "<h5><strong>Areal: </strong>"+att.Areal+" ha"+"</h5>"+
                         "<h5><strong>Status: </strong>"+att.status+"</h5>"+
-                        "<h5><strong>Læs mere: </strong>"+"<b></b><a href="+att.Forklaring+">"+att.navn+"</a></h5>"
+                        "<h5><strong>Læs mere: </strong>"+"<b></b><a href="+att.Forklaring+ target="_blank+">"+att.navn+"</a></h5>"
                         );
                   
                                 }
